@@ -46,4 +46,8 @@ Subject length lower bound = -1
 No set of starting bytes
 JIT study was successful
 
+/(?(R)a*(?1)|((?R))b)/S+
+    aaaabcde
+Error -27 (JIT stack limit reached)
+
 /-- End of testinput14 --/
